Playlist management
Added playlist management through a right panel